--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     volumes:
       - './hadoop/core-site.xml:/opt/hadoop/etc/hadoop/core-site.xml'
       - './hadoop/ibm-cos-java-sdk-core-2.13.6.jar:/opt/hive/lib/ibm-cos-java-sdk-core-2.13.6.jar'
+      - './hadoop/sdk-core-9.22.0.jar:/opt/hive/lib/sdk-core-9.22.0.jar'
   mc-job:
     image: 'minio/mc:latest'
     environment:
